--- a/frontend/agri-price-tracker/src/app/components/public-portal/public-portal.component.html
+++ b/frontend/agri-price-tracker/src/app/components/public-portal/public-portal.component.html
@@ -158,7 +158,7 @@
               <thead>
                 <tr>
                   <th>Agricultural Product</th>
-                  <th>Source</th> 
+                  <th>Source</th>
                   <th>Category</th>
                   <th>Current Price</th>
                   <th>Trend</th>
@@ -182,8 +182,7 @@
                     </div>
                   </td>
                   <td>
-                     <span class="badge" 
-                      [ngClass]="{
+                    <span class="badge" [ngClass]="{
                         'bg-primary': crop.source === 'kamis', 
                         'bg-purple text-white': crop.source === 'admin',
                         'bg-warning text-dark': crop.source === 'farmer'
