--- a/frontend/agri-price-tracker/src/app/components/footer/footer.component.html
+++ b/frontend/agri-price-tracker/src/app/components/footer/footer.component.html
@@ -44,7 +44,7 @@
             <h4>Support</h4>
             <div class="contact-info">
               <p><i class="fas fa-phone"></i> SMS: +254-700-AGRI (2474)</p>
-              <p><i class="fas fa-envelope"></i>support&#64;agriprice.co.ke</p>
+              <p><i class="fas fa-envelope"></i>agriculture.price.system&#64;gmail.com</p>
               <p><i class="fas fa-map-marker-alt"></i> Agricultural Technology Hub, Kenya</p>
             </div>
           </div>
